--- a/index.jade
+++ b/index.jade
@@ -71,13 +71,13 @@ html(lang="en")
 						span Specialist with proficient technical and language skills
 					.feature
 						include icons/3-office
-						span Our office availabity for 24/7
+						span.intellectual Protected intellectual property rights
 					.feature
 						include icons/4-meeting
 						span Personal meetings and direct comunication
 					.feature
 						include icons/5-seniors
-						span Seniors for Seniors
+						span Candidates market overview within 24 hours
 					.feature
 						include icons/6-risk
 						span Long-term partnership
@@ -118,7 +118,7 @@ html(lang="en")
 
 						.slide(data-tappable="true")
 							.portfolio-item
-								h2.sub-title Developing customized web products is our core competence. We bring online presence to businesses by creating applications that resemble services and products as a distinctive brand. Our experienced team of developers organize and structure both front-end and back-end to create smooth and intuitive navigation for browsing as well as rich user experience.
+								h2.sub-title Uneed Web builds mobile applications by using cross platform mobile application development. It enables you to have one codebase and to customize for multiple platforms, brings cost-effectiveness and simplicity once changes and synchronization are applied.
 
 								.tags
 									.tag ReactJS
@@ -131,7 +131,7 @@ html(lang="en")
 
 						.slide(data-tappable="true")
 							.portfolio-item
-								h2.sub-title Developing customized web products is our core competence. We bring online presence to businesses by creating applications that resemble services and products as a distinctive brand. Our experienced team of developers organize and structure both front-end and back-end to create smooth and intuitive navigation for browsing as well as rich user experience.
+								h2.sub-title Uneed Web creates a unique product web design to match you company’s unique brand. A customized web design which is search engine friendly, stands out from your competitors and focuses on your customers. To optimize your customers browsing experience we create sites and systems based on responsive design.
 
 								.tags
 									.tag ReactJS
