--- a/portfolio/index.jade
+++ b/portfolio/index.jade
@@ -8,7 +8,7 @@ html(lang="en")
 		section#description
 			.container
 				h1.title.dark Portfolio
-				h2.sub-title We have a proven track record of building high quality solutions for customers all over the world. Browse through our case studies to find projects that are similar to yours and with clients from your region.
+				h2.sub-title We have a proven track record of building high-quality solutions for customers all over the world. Browse through our case studies and see projects that we have implemented.
 
 		section#switcher
 			#switch-left
@@ -31,9 +31,9 @@ html(lang="en")
 					.project-content
 						.project-header
 							h2.type Web Development
-							.name Travel Application
+							.name Travel
 						.project-footer
-							.description Travel system which introduces the new level of the travel experience. Gives a possibility to plan your trip, book the flight and hotel tickets, assist the customer during the vacation. It includes the innovative way to manage the user purchases and preferences, provides the new way of data input - NLP (Natural Language Processing)
+							.description Development of a web application for a traveling company with a complete 			customer planning journey features.
 							a.details-link(href="/portfolio/travel")
 								button.details-button(type="button")
 									span Details
@@ -44,10 +44,10 @@ html(lang="en")
 					.project-content
 						.project-header
 							h2.type Web Development
-							.name Sport Application
+							.name Entertainment
 						.project-footer
-							.description A real-time web application for visualization different sport events.
-							a.details-link(href="/portfolio")
+							.description Development a web application for a sports betting company for the audience of 5 million users.
+							a.details-link(href="/portfolio/sport")
 								button.details-button(type="button")
 									span Details
 									span.icon
@@ -56,77 +56,77 @@ html(lang="en")
 					.overlay
 					.project-content
 						.project-header
-							h2.type Mobile Development
+							h2.type Travel
 							.name YOW
 						.project-footer
-							.description Yow application description would be here in the nearest future
-							a.details-link(href="/portfolio")
+							.description Our own mobile travel application.
+							a.details-link(href="/portfolio/yow")
 								button.details-button(type="button")
 									span Details
 									span.icon
 										include ../icons/arrow-go
-				.project
+				.project.banking
 					.overlay
 					.project-content
 						.project-header
 							h2.type Web Development
-							.name Travel Application
+							.name Banking / Finance
 						.project-footer
-							.description Travel system which introduces the new level of the travel experience. Gives a possibility to plan your trip, book the flight and hotel tickets, assist the customer during the vacation. It includes the innovative way to manage the user purchases and preferences, provides the new way of data input - NLP (Natural Language Processing)
-							a.details-link(href="/portfolio")
+							.description A fee billing system project for a major Hong Kong bank.
+							a.details-link(href="/portfolio/banking")
 								button.details-button(type="button")
 									span Details
 									span.icon
 										include ../icons/arrow-go
-				.project
+				.project.gammling
 					.overlay
 					.project-content
 						.project-header
 							h2.type Web Development
-							.name Travel Application
+							.name Gambling
 						.project-footer
-							.description Travel system which introduces the new level of the travel experience. Gives a possibility to plan your trip, book the flight and hotel tickets, assist the customer during the vacation. It includes the innovative way to manage the user purchases and preferences, provides the new way of data input - NLP (Natural Language Processing)
-							a.details-link(href="/portfolio")
+							.description Revamping of existing gambling web applications for a betting company.
+							a.details-link(href="/portfolio/gambling")
 								button.details-button(type="button")
 									span Details
 									span.icon
 										include ../icons/arrow-go
-				.project
+				.project.social-travel
 					.overlay
 					.project-content
 						.project-header
 							h2.type Web Development
-							.name Travel Application
+							.name Travel
 						.project-footer
-							.description Travel system which introduces the new level of the travel experience. Gives a possibility to plan your trip, book the flight and hotel tickets, assist the customer during the vacation. It includes the innovative way to manage the user purchases and preferences, provides the new way of data input - NLP (Natural Language Processing)
-							a.details-link(href="/portfolio")
+							.description Creation of an engaging travel-oriented social network service.
+							a.details-link(href="/portfolio/social-travel")
 								button.details-button(type="button")
 									span Details
 									span.icon
 										include ../icons/arrow-go
-				.project
+				.project.localisation
 					.overlay
 					.project-content
 						.project-header
 							h2.type Web Development
-							.name Travel Application
+							.name Entertainment
 						.project-footer
-							.description Travel system which introduces the new level of the travel experience. Gives a possibility to plan your trip, book the flight and hotel tickets, assist the customer during the vacation. It includes the innovative way to manage the user purchases and preferences, provides the new way of data input - NLP (Natural Language Processing)
-							a.details-link(href="/portfolio")
+							.description Localisation helper for an online sport application
+							a.details-link(href="/portfolio/localisation")
 								button.details-button(type="button")
 									span Details
 									span.icon
 										include ../icons/arrow-go
 
-		section#result
-			h1.title.dark Result
-			h2.sub-title You get well-qualified team member, clean and robust code and successfully implemented product
+		//- section#result
+		//- 	h1.title.dark Result
+		//- 	h2.sub-title You get well-qualified team member, clean and robust code and successfully implemented product
 
-			a(href="/contact-us")
-				button(role="button")
-					span Share your requirements
-					span.icon
-						include ../icons/arrow-go
+		//- 	a(href="/contact-us")
+		//- 		button(role="button")
+		//- 			span Share your requirements
+		//- 			span.icon
+		//- 				include ../icons/arrow-go
 
 		include ../parts/footer
 
