--- a/services/outsource/index.jade
+++ b/services/outsource/index.jade
@@ -11,7 +11,7 @@ html(lang="en")
 			#switch-left
 				include ../../icons/left-arrow
 			a(href="/services/outsource").active
-				h2.sub-title Development of the project
+				h2.sub-title Development of the Project
 			a(href="/services/outstaff")
 				h2.sub-title Dedicated Development Team
 			a(href="/services/relocation")
@@ -24,17 +24,18 @@ html(lang="en")
 				.service-image.outsource
 				h1.title.dark Development of the project
 
-				h2.sub-title Aimed for businesses that have a defined objective for the project, constrained in time or budget and do not consider establishing an on-going software development team. With offloading your project to us you will optimize work and save the best in-house staff for more valuable tasks. 
+				h2.sub-title Aimed for businesses that have a defined objective for the project, constrained in time or budget and do not consider establishing an on-going software development team.
+					p With offloading your project to us you will optimize work and save the best in-house staff for more valuable tasks. 
 
-				h2.sub-title For long-term projects (6+ months) we suggest you consider the Dedicated Development Team model.
+					p For long-term projects (6+ months) we suggest you consider the Dedicated Development Team model.
 
-				h2.sub-title.result You do 5%, we do rest 95% for you. 
+				h2.sub-title.result You do 5%, we do the remaining 95% for you.
 
-				a(href="/services")
-					button(role="button")
-						span Services comparison
-						span.icon
-							include ../../icons/arrow-go
+				//- a(href="/services")
+				//- 	button(role="button")
+				//- 		span Services comparison
+				//- 		span.icon
+				//- 			include ../../icons/arrow-go
 
 		section#workflow.mobile
 			.container
@@ -48,7 +49,7 @@ html(lang="en")
 					li.color-4 Submit project offer, pricing and schedule
 					li.color-5 Set up a team and start a project
 					li.color-6 Test and launch of a project
-					li.color-7 In case needed, continued project support
+					li.color-7 In case needed, continuous project support
 
 		section#workflow.desktop
 			.container
@@ -89,15 +90,15 @@ html(lang="en")
 					.workflow-item
 						.ball
 						.arrow
-						.text In case needed, continued project support
+						.text In case needed, continuous project support
 
 		section#result
 			h1.title.dark Result
 			h2.sub-title You get well-qualified team member, clean and robust code and successfully implemented product
 
-			a(href="/contact-us")
+			a(href="/services")
 				button(role="button")
-					span Share your requirements
+					span Services comparison
 					span.icon
 						include ../../icons/arrow-go
 
