--- a/services/outstaff/index.jade
+++ b/services/outstaff/index.jade
@@ -24,28 +24,31 @@ html(lang="en")
 				.service-image.outstaff
 				h1.title.dark Dedicated Development Team
 
-				h2.sub-title A cost-effective model for businesses that require high-quality, efficient resources within an optimized time frame. <br/> You get control over the selection and management of your dedicated IT team, with no unexpected costs, flexible workload and scope. While you focus on your projects, we will take care of all time-consuming tasks and ensure clear communication between your in-house team and offshore team.
+				h2.sub-title 
+					p A cost-effective model for businesses that require high-quality, efficient resources within an optimized time frame. You get control over the selection and management of your dedicated IT team, with no unexpected costs, flexible workload and scope
+
+					p While you focus on your projects, we will take care of all time-consuming tasks and ensure clear communication between your in-house team and offshore team.
 
 
-				h2.sub-title.result You do 5%, we do rest 95% for you. 
+				h2.sub-title.result You do 5%, we do the remaining 95% for you.
 
-				a(href="/services")
-					button(role="button")
-						span Services comparison
-						span.icon
-							include ../../icons/arrow-go
+				//- a(href="/services")
+				//- 	button(role="button")
+				//- 		span Services comparison
+				//- 		span.icon
+				//- 			include ../../icons/arrow-go
 
 		section#workflow.mobile
 			.container
 				h1.title You do
 				ul.customer-workflow
-					li.color-1 Provide the number and the skillset of required IT experts
+					li.color-1 Provide a number and a skill set of required IT experts
 					li.color-2 Evaluate and approve team
 					li.color-3 Assign project tasks
 					li.color-4 Renew the contract
 				h1.title We do
 				ul.uneed-workflow
-					li.color-4 Search for candidates
+					li.color-4 Candidates market overview in 24 hours
 					li.color-5 Conduct recruitment process to check candidates’ personal skills and language proficiency
 					li.color-6 Conduct technical interviews
 					li.color-6 Suggest candidates and schedule an interview with your team
@@ -61,12 +64,12 @@ html(lang="en")
 					.workflow-item
 						.ball
 						.arrow
-						.text Provide the number and the skillset of required IT experts
+						.text Provide a number and a skill set of required IT experts
 				.workflow-row.left.color-2
 					.workflow-item
 						.ball
 						.arrow
-						.text Search for candidates
+						.text Candidates market overview in 24 hours
 				.workflow-row.left.color-3
 					.workflow-item
 						.ball
@@ -112,9 +115,9 @@ html(lang="en")
 			h1.title.dark Result
 			h2.sub-title You get well-qualified team member, clean and robust code and successfully implemented product
 
-			a(href="/contact-us")
+			a(href="/services")
 				button(role="button")
-					span Share your requirements
+					span Services comparison
 					span.icon
 						include ../../icons/arrow-go
 
