--- a/styl/contact-us.styl
+++ b/styl/contact-us.styl
@@ -87,7 +87,7 @@
 			margin: auto
 			background-color: #ffffff
 			box-shadow: 0 0 14px 0 rgba(14, 26, 53, 0.2)
-			margin-bottom: 3rem
+			margin-bottom: 5rem
 			.contact-form, .contact-info
 				width: 50%
 			.contact-form
@@ -108,24 +108,24 @@
 				.contacts
 					margin: 0
 
-	#contact-footer
-		padding: 3rem 1rem 5rem 1rem
-		border-radius: 4px
-		background-color: #f3f8ff
-		border: solid 1px #e3eaf3
-		display: flex
-		flex-direction: column
-		justify-content: center
-		text-align: center
-		button
-			margin-top: 1rem
-		@media screen and (min-width: $screenMedium)
-			padding: 1rem 0 4rem 0
-			h1.title
-				font-size: 48px
-				text-align: center
-			h2.sub-title
-				width: 30rem
-				text-align: center
-				color: #8492af
-				margin-bottom: 2rem
+	// #contact-footer
+	// 	padding: 3rem 1rem 5rem 1rem
+	// 	border-radius: 4px
+	// 	background-color: #f3f8ff
+	// 	border: solid 1px #e3eaf3
+	// 	display: flex
+	// 	flex-direction: column
+	// 	justify-content: center
+	// 	text-align: center
+	// 	button
+	// 		margin-top: 1rem
+	// 	@media screen and (min-width: $screenMedium)
+	// 		padding: 1rem 0 4rem 0
+	// 		h1.title
+	// 			font-size: 48px
+	// 			text-align: center
+	// 		h2.sub-title
+	// 			width: 30rem
+	// 			text-align: center
+	// 			color: #8492af
+	// 			margin-bottom: 2rem
