--- a/styl/portfolio.styl
+++ b/styl/portfolio.styl
@@ -23,7 +23,15 @@
 			&.sport
 				background-image: url('/photos/sport/sport-portfolio-grid.png')
 			&.yow
-				background-image: url('/photos/YOW/YOW-portfolio-grid.png')
+				background-image: url('/photos/yow/yow-portfolio-grid.png')
+			&.banking
+				background-image: url('/photos/banking/banking-portfolio-grid.png')
+			&.gambling
+				background-image: url('/photos/gambling/gambling-portfolio-grid.png')
+			&.localisation
+				background-image: url('/photos/localisation/localisation-portfolio-grid.png')
+			&.social-travel
+				background-image: url('/photos/social-travel/social-travel-portfolio-grid.png')
 			.overlay, .project-content
 				width: 100%
 				height: 100%
@@ -125,8 +133,7 @@
 			background-size: cover
 
 	#description
-		padding-top: 2rem
-		padding-bottom: 5rem
+		padding: 2rem 0 4rem 0
 		.buttons-container
 			width: 100%
 			display: flex
@@ -158,14 +165,25 @@
 				width: 40rem
 			
 	#approaches
-		padding: 4rem 0
+		padding: 1rem 0 5rem 0
 		background-size: cover
-		background-image: url('/photos/travel/travel-image-1.png')
 		h2.sub-title
 			font-weight: 300
 			color: #f3f8ff
 		&.travel
 			background-image: url('/photos/travel/travel-image-1.png')
+		&.sport
+			background-image: url('/photos/sport/sport-image-1.png')
+		&.yow
+			background-image: url('/photos/yow/yow-image-1.png')
+		&.banking
+			background-image: url('/photos/banking/banking-image-1.png')
+		&.gambling
+			background-image: url('/photos/gambling/gambling-image-1.png')
+		&.localisation
+			background-image: url('/photos/localisation/localisation-image-1.png')
+		&.social-travel
+			background-image: url('/photos/social-travel/social-travel-image-1.png')
 
 	#gallery
 		.container
@@ -184,6 +202,50 @@
 							background-image: url('/photos/travel/travel-gallery-1.png')
 						&:nth-child(2)
 							background-image: url('/photos/travel/travel-gallery-2.png')
+				&.sport
+					.slide
+						background-size: cover
+						&:nth-child(1)
+							background-image: url('/photos/sport/sport-gallery-1.png')
+						&:nth-child(2)
+							background-image: url('/photos/sport/sport-gallery-2.png')
+				&.yow
+					.slide
+						background-size: cover
+						&:nth-child(1)
+							background-image: url('/photos/yow/yow-gallery-1.png')
+						&:nth-child(2)
+							background-image: url('/photos/yow/yow-gallery-2.png')
+				&.banking
+					.slide
+						background-size: cover
+						&:nth-child(1)
+							background-image: url('/photos/banking/banking-gallery-1.png')
+						&:nth-child(2)
+							background-image: url('/photos/banking/banking-gallery-2.png')
+				&.gambling
+					.slide
+						background-size: cover
+						&:nth-child(1)
+							background-image: url('/photos/gambling/gambling-gallery-1.png')
+						&:nth-child(2)
+							background-image: url('/photos/gambling/gambling-gallery-2.png')
+				&.localisation
+					.slide
+						background-size: cover
+						&:nth-child(1)
+							background-image: url('/photos/localisation/localisation-gallery-1.png')
+						&:nth-child(2)
+							background-image: url('/photos/localisation/localisation-gallery-2.png')
+				&.social-travel
+					.slide
+						background-size: cover
+						&:nth-child(1)
+							background-image: url('/photos/social-travel/social-travel-gallery-1.png')
+						&:nth-child(2)
+							background-image: url('/photos/social-travel/social-travel-gallery-2.png')
+						&:nth-child(3)
+							background-image: url('/photos/social-travel/social-travel-gallery-3.png')
 				.dots
 					position: absolute
 					bottom: 0
