--- a/styl/services.styl
+++ b/styl/services.styl
@@ -9,17 +9,9 @@
 			h2.sub-title
 				width: 100%
 				margin: auto
-	
-	#service-description
-		font-size: 18px
-		font-weight: 300
-		line-height: 1.33
-		text-align: center
-		color: #8492af
-		padding-top: 1rem
-		padding-bottom: 2rem
 
 	#service-table
+		margin-bottom: 3rem
 		width: 100%
 		.services-titles
 			display: none
@@ -103,7 +95,7 @@
 					opacity: 1
 		@media screen and (min-width: $screenSmall)
 			width: 90%
-			margin: auto
+			margin: 0 auto 3rem auto
 			display: flex
 			border-radius: 4px
 			background-color: #f3f8ff
@@ -120,9 +112,9 @@
 					letter-spacing: 0.3px
 					text-align: left
 					color: #8492af
-					border-top: 1px solid #e3eaf3
 				.title-option
 					padding: 1rem
+					border-top: 1px solid #e3eaf3
 				.title-header
 					height: 161px
 					padding: .5rem 1rem
