--- a/portfolio/travel/index.jade
+++ b/portfolio/travel/index.jade
@@ -10,36 +10,39 @@ html(lang="en")
 		section#description
 			.container
 				.buttons-container
-					a(href="/services")
+					a(href="/portfolio/social-travel")
 						button.prev-project
 							span.icon.rotated
 								include ../../icons/arrow-go
 							span Previous Project
-					a(href="/services")
+					a(href="/portfolio/sport")
 						button.next-project
 							span Next Project
 							span.icon
 								include ../../icons/arrow-go
-				h2.type Web Development
-				h1.title.dark Custom Solution
-				h2.sub-title Travel system which introduces the new level of the travel experience. It gives a possibility to plan your trip, book the flight and hotel tickets, assists the customer during the vacation. Also it includes the innovative way to manage the user purchases and preferences, provides the new way of data input - NLP (Natural Language Processing). 
+				h2.type Travel
+				h1.title.dark What was the challenge?
+				h2.sub-title Develop a web application for a traveling company with a complete customer planning journey features. Improve user search performance by using NLP technology.
 
 		section#approaches.travel
 			.container
-				h2.sub-title Project bootstrapping, defining the initial requirements, selection of tools, frameworks and approaches. Building various application components (navigation, state tracker , geolocation service, custom sliders and carousel widgets). Maintaining Jenkins automated builds and setting up Amazon EC2 environments (Linux, Apache). Translating designs and style guides provided by the UI/UX team into functional user interfaces, ensuring cross browser compatibility and performance. 
+				h1.title Challenge accepted
+				h2.sub-title 
+					p After defining initial requirements, tools and frameworks for the project, the travel website was developed and featured GDS integration with booking engine, invoicing and payment system. Built on a cross platform and with a responsive design it contained a simplified booking process with real-time results. 
+					p The natural language processing entity linking was implemented for user search performance improvement. This data input technology allowed determining the identity of entities mentioned in the text by user.
 
 		section#description
 			.container
-				h1.title.dark Technologies
-				h2.sub-title Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				h1.title.dark What technologies did we use?
 				.tags
 					.tag AngularJS
 					.tag Jade
 					.tag Stylus
-					.tag GulpJS
+					.tag GulpJS, lodash
 					.tag Yeoman
-					.tag GoogleMaps
+					.tag Google Maps
 					.tag Geolocation
+					.tag AWS (EC2)
 					.tag Jenkins
 					.tag Git
 					.tag Karma
