--- a/services/relocation/index.jade
+++ b/services/relocation/index.jade
@@ -15,24 +15,24 @@ html(lang="en")
 			a(href="/services/outstaff")
 				h2.sub-title Dedicated Development Team
 			a(href="/services/relocation").active
-				h2.sub-title Developer for relocation
+				h2.sub-title Developer for Relocation
 			#switch-right
 				include ../../icons/left-arrow
 
 		section#description
 			.container
 				.service-image.relocation
-				h1.title.dark Developer for relocation
+				h1.title.dark Developer for Relocation
 
 				h2.sub-title The cost-benefit service that allows you to access a richer pool of IT experts and leverage your human capital. When the top talents for your industry are above your budget or simply not located in your area we will provide you with high-skilled candidates that are willing to relocate to your place.
 
-				h2.sub-title.result You do 5%, we do rest 95% for you. 
+				h2.sub-title.result You do 5%, we do the remaining 95% for you.
 
-				a(href="/services")
-					button(role="button")
-						span Services comparison
-						span.icon
-							include ../../icons/arrow-go
+				//- a(href="/services")
+				//- 	button(role="button")
+				//- 		span Services comparison
+				//- 		span.icon
+				//- 			include ../../icons/arrow-go
 
 		section#workflow.mobile
 			.container
@@ -43,7 +43,7 @@ html(lang="en")
 					li.color-3 Sign contract with candidates
 				h1.title We do
 				ul.uneed-workflow
-					li.color-4 Search for IT experts
+					li.color-4 Candidates market overview in 24 hours
 					li.color-5 Conduct recruitment process to check candidates’ personal skills and language proficiency
 					li.color-6 Conduct technical interview
 					li.color-7 Suggest candidates and schedule an interview with your team
@@ -63,7 +63,7 @@ html(lang="en")
 					.workflow-item
 						.ball
 						.arrow
-						.text Search for IT experts
+						.text Candidates market overview in 24 hours
 				.workflow-row.left.color-3
 					.workflow-item
 						.ball
@@ -99,9 +99,9 @@ html(lang="en")
 			h1.title.dark Result
 			h2.sub-title You get a new, high-skilled team member that completes your business team.
 
-			a(href="/contact-us")
+			a(href="/services")
 				button(role="button")
-					span Share your requirements
+					span Services comparison
 					span.icon
 						include ../../icons/arrow-go
 
