--- a/styl/index.styl
+++ b/styl/index.styl
@@ -159,6 +159,8 @@
 					font-weight: 300
 					letter-spacing: 0.3px
 					color: #fefefe
+					&.intellectual
+						width: 13rem
 		@media screen and (min-width: $screenSmall)
 			.title
 				font-size: 48px
