--- a/contact-us/index.jade
+++ b/contact-us/index.jade
@@ -22,6 +22,8 @@ html(lang="en")
 						button.black(type="submit") Send Email
 
 				.contact-info
+					.details
+						h1.title Contact Details
 					.contacts
 						address Kiev, Ukraine, 02140, Bazhana Ave 24/1
 						p
