--- a/index.jade
+++ b/index.jade
@@ -9,22 +9,22 @@ html(lang="en")
 			.container
 				//- h1.title(class="typewrite" data-period="1000" data-type='[ "Web Development Company", "Software Development Company" ]')
 					span.wrap
-				h1.title Uneed Web
-				h2.sub-title Where quality is trend and digital progress an outcome
-				a.learn-more(href="/services")
-					button.white(role="button") Learn More
+				h1.title Bringing quality and digital progress
+				h2.sub-title Equipped with the latest technologies and best tech talents, we will light up your digital world.
+				//- a.learn-more(href="/services")
+				//- 	button.white(role="button") Learn More
 			.scroll-down
 
-		section#info.flex.align-ver-center
+		section#info.section-top.flex.align-ver-center
 			.container
 				h1.title.dark Our Services
-				h2.sub-title We provide 3 options to help your business maintain, extend and acquire <b>qualitative IT resources</b>
+				h2.sub-title Depending on time, budget, scope we provide 3 options to help your business maintain, extend and acquire qualitative IT resources.
 
 		section#services.flex.align-ver-center
 			.container.service.flex.flex-column.align-ver-center
 				img.service-image(src="/images/gif/outsource.gif" width="100" height="100")
 				.service-description
-					h1.title.dark.service-title Development of the Project
+					h1.title.dark.service-title Project Development
 					h2.sub-title.service-subtitle recommended for
 					ul.service-list
 						li short term projects
@@ -47,7 +47,7 @@ html(lang="en")
 			.container.service.flex.flex-column.align-ver-center
 				img.service-image(src="/images/gif/relocation.gif" width="100" height="100")
 				.service-description
-					h1.title.dark.service-title Developer for relocation
+					h1.title.dark.service-title Specialist for Relocation
 					h2.sub-title.service-subtitle recommended for
 					ul.service-list
 						li building/extending your IT department
@@ -55,13 +55,15 @@ html(lang="en")
 					a(href="/services/relocation")
 						button(role="button") Get more info
 
-		section#about-services.flex.align-ver-center
+		section#about-services.section-bottom.flex.align-ver-center
 			.container
 				| Learn more about each of these options and their difference 
-				a.underlined(href="/services") HERE
+				a.link.underlined(href="/services") here
 		section#guarantee.flex.align-ver-center
 			.container
-				h1.title We provide our customers with
+				.section-top
+					h1.title We provide our customers with
+					h2.sub-title Lorem ipsum dasj fsahks fahksf asfha kfsakfakshfkas
 				.features-container
 					.feature
 						include icons/1-quality
@@ -86,8 +88,9 @@ html(lang="en")
 
 		section#portfolio
 			.container
-				h1.title.dark Our Expertise
-				h2.sub-title Our team is comprised of devoted professionals who have expertise in multiple areas. We build web products that work and last, advance your customer journey, target and keep your customers in the loop.
+				.section-top
+					h1.title.dark Our Expertise
+					h2.sub-title Our team is comprised of devoted professionals who have expertise in multiple areas. We build web products that work and last, advance your customer journey, target and keep your customers in the loop.
 
 				#switcher
 					#switch-left
