--- a/portfolio/banking/index.jade
+++ b/portfolio/banking/index.jade
@@ -22,7 +22,7 @@ html(lang="en")
 								include ../../icons/arrow-go
 				h2.type Banking / Finance
 				h1.title.dark What was the challenge?
-				h2.sub-title Create a fee billing system for a major Hong Kong corporate bank. The system has to charge regularly fees from institutional clients for management and performance on financial services.
+				h2.sub-title Create a fee billing system for a major Hong Kong corporate bank. The system has to charge regular fees from institutional clients for management and performance on financial services.
 
 		section#approaches.banking
 			.container
