--- a/portfolio/index.jade
+++ b/portfolio/index.jade
@@ -56,8 +56,8 @@ html(lang="en")
 					.overlay
 					.project-content
 						.project-header
-							h2.type Travel
-							.name YOW
+							h2.type Mobile Development
+							.name Travel
 						.project-footer
 							.description Our own mobile travel application.
 							a.details-link(href="/portfolio/yow")
@@ -109,7 +109,7 @@ html(lang="en")
 					.project-content
 						.project-header
 							h2.type Web Development
-							.name Entertainment
+							.name Data Management
 						.project-footer
 							.description Localisation helper for an online sport application
 							a.details-link(href="/portfolio/localisation")
@@ -118,15 +118,15 @@ html(lang="en")
 									span.icon
 										include ../icons/arrow-go
 
-		//- section#result
-		//- 	h1.title.dark Result
-		//- 	h2.sub-title You get well-qualified team member, clean and robust code and successfully implemented product
+		section#result
+			h1.title.dark Result
+			h2.sub-title You get well-qualified team member, clean and robust code and successfully implemented product
 
-		//- 	a(href="/contact-us")
-		//- 		button(role="button")
-		//- 			span Share your requirements
-		//- 			span.icon
-		//- 				include ../icons/arrow-go
+			a(href="/contact-us")
+				button(role="button")
+					span Share your requirements
+					span.icon
+						include ../icons/arrow-go
 
 		include ../parts/footer
 
