--- a/portfolio/yow/index.jade
+++ b/portfolio/yow/index.jade
@@ -21,16 +21,14 @@ html(lang="en")
 							span.icon
 								include ../../icons/arrow-go
 				h1.title.dark YOW
-				h2.sub-title You travel a lot, but you don’t keep track of the places you visited? Your friend asks you about countries you’ve seen and you scratch you head thinking? Better scratch the map. Try our epic application YOW.
+				h2.sub-title You travel a lot, but you don’t keep track of the places you visited? Your friend asks you about countries you’ve seen and you scratch your head thinking? Better scratch the map. Try our epic application YOW.
 				h2.sub-title As we travel extensively throughout the year for fellow travel-lovers we have crafted an application.
 
 
 		section#approaches.yow
 			.container
 				h1.title What is YOW?
-				h2.sub-title 
-					p Our team of experts developed a social media application that enabled users to create, book activities (canoeing, climbing, horse-riding, hiking and mountaineering). The activities could be organized both by agencies as well as by single travelers.
-					p An e-commerce platform was integrated to the web application and facilitated processing not only activity payments, but also allowed equipment stores to sell their products onsite. As a social media, the network provided feedback tools, reviews, commentaries, messaging.
+				h2.sub-title YOW is a travel scratch map. Whenever you visit a new country, city, street it uncovers them on the map and marks places you have been to. Travel scratch map is based on Google Maps API keeps track of places you have visited, shows your exploration progress and lets you share them on social networks. It stores photos of your favorite places and suggests the new ones in nearby.
 
 		section#description
 			.container
