--- a/services/index.jade
+++ b/services/index.jade
@@ -49,7 +49,7 @@ html(lang="en")
 							.slide-header
 								.service-image
 									include ../icons/outsource
-								p Development of the Project
+								p Project Development
 							.slide-right.flex.align-hor-center.align-ver-center
 								include ../icons/arrow-go
 						.slide-option(data-tappable="true")
@@ -93,9 +93,9 @@ html(lang="en")
 							.option-value Monthly Payment
 						.slide-option.button(data-tappable="true")
 							a(href="/services/outsource")
-								button(role="button") Get more info
+								button(role="button") Learn More
 						.slide-option.footer(data-tappable="true")
-							a(href="/contact-us") Get Started Now
+							a(href="/contact-us") Start Now
 					.slide
 						.slide-header-container
 							.slide-left.flex.align-hor-center.align-ver-center
@@ -147,9 +147,9 @@ html(lang="en")
 							.option-value Monthly Rates
 						.slide-option.button(data-tappable="true")
 							a(href="/services/outstaff")
-								button(role="button") Get more info
+								button(role="button") Learn More
 						.slide-option.footer(data-tappable="true")
-							a(href="/contact-us") Get Started Now
+							a(href="/contact-us") Start Now
 					.slide
 						.slide-header-container
 							.slide-left.flex.align-hor-center.align-ver-center
@@ -157,7 +157,7 @@ html(lang="en")
 							.slide-header
 								.service-image
 									include ../icons/relocation
-								p Developer for relocation
+								p Specialist for Relocation
 							.slide-right.flex.align-hor-center.align-ver-center
 								include ../icons/arrow-go
 						.slide-option(data-tappable="true")
@@ -201,9 +201,9 @@ html(lang="en")
 							.option-value %
 						.slide-option.button(data-tappable="true")
 							a(href="/services/relocation")
-								button(role="button") Get more info
+								button(role="button") Learn More
 						.slide-option.footer(data-tappable="true")
-							a(href="/contact-us") Get Started Now
+							a(href="/contact-us") Start Now
 
 		include ../parts/footer
 		script(type="text/javascript" src="/js/libs.min.js")
