--- a/services/outsource/index.jade
+++ b/services/outsource/index.jade
@@ -11,21 +11,21 @@ html(lang="en")
 			#switch-left
 				include ../../icons/left-arrow
 			a(href="/services/outsource").active
-				h2.sub-title Development of the Project
+				h2.sub-title Project Development
 			a(href="/services/outstaff")
 				h2.sub-title Dedicated Development Team
 			a(href="/services/relocation")
-				h2.sub-title Developer for relocation
+				h2.sub-title Specialist for Relocation
 			#switch-right
 				include ../../icons/left-arrow
 
 		section#description
 			.container
 				.service-image.outsource
-				h1.title.dark Development of the project
+				h1.title.dark Project Development
 
-				h2.sub-title Aimed for businesses that have a defined objective for the project, constrained in time or budget and do not consider establishing an on-going software development team.
-					p With offloading your project to us you will optimize work and save the best in-house staff for more valuable tasks. 
+				h2.sub-title 
+					p Aimed at businesses that have a defined objective for the project, constrained in time or budget and do not consider establishing an on-going software development team. With offloading your project to us you will optimize work and save the best in-house staff for more valuable tasks. 
 
 					p For long-term projects (6+ months) we suggest you consider the Dedicated Development Team model.
 
