--- a/services/outstaff/index.jade
+++ b/services/outstaff/index.jade
@@ -11,11 +11,11 @@ html(lang="en")
 			#switch-left
 				include ../../icons/left-arrow
 			a(href="/services/outsource")
-				h2.sub-title Development of the project
+				h2.sub-title Project Development
 			a(href="/services/outstaff").active
 				h2.sub-title Dedicated Development Team
 			a(href="/services/relocation")
-				h2.sub-title Developer for relocation
+				h2.sub-title Specialist for Relocation
 			#switch-right
 				include ../../icons/left-arrow
 
