--- a/services/relocation/index.jade
+++ b/services/relocation/index.jade
@@ -11,18 +11,18 @@ html(lang="en")
 			#switch-left
 				include ../../icons/left-arrow
 			a(href="/services/outsource")
-				h2.sub-title Development of the project
+				h2.sub-title Project Development
 			a(href="/services/outstaff")
 				h2.sub-title Dedicated Development Team
 			a(href="/services/relocation").active
-				h2.sub-title Developer for Relocation
+				h2.sub-title Specialist for Relocation
 			#switch-right
 				include ../../icons/left-arrow
 
 		section#description
 			.container
 				.service-image.relocation
-				h1.title.dark Developer for Relocation
+				h1.title.dark Specialist for Relocation
 
 				h2.sub-title The cost-benefit service that allows you to access a richer pool of IT experts and leverage your human capital. When the top talents for your industry are above your budget or simply not located in your area we will provide you with high-skilled candidates that are willing to relocate to your place.
 
