--- a/portfolio/localisation/index.jade
+++ b/portfolio/localisation/index.jade
@@ -22,12 +22,12 @@ html(lang="en")
 								include ../../icons/arrow-go
 				h2.type Data Management
 				h1.title.dark What was the challenge?
-				h2.sub-title Provide a solution for web sport application translation in 32 languages.
+				h2.sub-title Provide a solution for translation of an application in 32 languages.
 
 		section#approaches.localisation
 			.container
 				h1.title Challenge accepted
-				h2.sub-title To solve the problem of multiple languages our team developed an additional web application that managed project’s localization. The localization helper was an excellent tool to find untranslated or missing words/phrases in translations, securely protected content and prevented from damaging, pulled and gathered data that was previously stored in Google spreadsheets. It divided the users by their role and rights, tracked their activities and provided a back up for accumulated data.
+				h2.sub-title To solve the problem of multiple languages our team developed an additional web application that managed project’s localization. The localization helper was an excellent tool to find untranslated or missing words/phrases in translations, securely protected content and prevented from damaging, pulled and gathered data that was previously stored in Google spreadsheets. It divided the users by their role and rights, tracked their activities and provided a backup for accumulated data.
 
 		section#description
 			.container
