--- a/portfolio/social-travel/index.jade
+++ b/portfolio/social-travel/index.jade
@@ -29,7 +29,7 @@ html(lang="en")
 				h1.title Challenge accepted
 				h2.sub-title
 					p Our team of experts developed a social media application that enabled users to create, book activities (canoeing, climbing, horse-riding, hiking and mountaineering). The activities could be organized both by agencies as well as by single travelers. 
-					p An e-commerce platform was integrated to the web application and facilitated processing not only activity payments, but also allowed equipment stores to sell their products onsite. As a social media, the network provided feedback tools, reviews, commentaries, messaging. 
+					p An e-commerce platform was integrated into the web application and facilitated processing not only activity payments but also allowed equipment stores to sell their products onsite. As a social media, the network provided feedback tools, reviews, commentaries, messaging. 
 
 		section#description
 			.container
