--- a/styl/general.styl
+++ b/styl/general.styl
@@ -58,6 +58,7 @@ button
 	cursor: pointer
 	padding: .9rem 2.8rem
 	border-radius: 4px
+	font-weight: 400
 	background-color: transparent
 	border: solid 2px #8492af
 	font-size: 16px
@@ -412,6 +413,7 @@ header
 	.menu-item
 		font-size: 15px
 		line-height: 3.0
+		font-weight: 400
 		letter-spacing: 0.3px
 		text-align: center
 		color: #8492af
@@ -461,6 +463,7 @@ footer
 		font-size: 13px
 		text-align: center
 		color: #576076
+		font-weight: 400
 		p
 			margin: 0
 		address
@@ -469,6 +472,7 @@ footer
 			
 	.copyright
 		font-size: 13px
+		font-weight: 400
 		line-height: 2.31
 		text-align: center
 		color: #5a6379
