--- a/services/index.jade
+++ b/services/index.jade
@@ -7,8 +7,9 @@ html(lang="en")
 
 		section#description
 			.container
-				h1.title.dark Services
-				h2.sub-title Based on scope and duration of a project the following comparison table of 3 services is provided.
+				.section-top
+					h1.title.dark Services
+					h2.sub-title Based on scope and duration of a project the following comparison table of 3 services is provided.
 
 		section#service-table
 			.services-titles
